--- a/index.html
+++ b/index.html
@@ -16,18 +16,17 @@
   });
 </script>
 
-
   <nav class="navbar">
-    <div class="logo">AgroTech Grupo09</div>
-    <div class="menu-toggle" id="menu-toggle">&#9776;</div>
-    <ul class="nav-links" id="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="tecnologias.html">Tecnologias</a></li>
-      <li><a href="links.html">Órgãos e Iniciativas</a></li>
-      <li><a href="sobre.html">Sobre Nós</a></li>
-      <li><a href="contato.html">Fale Conosco</a></li>
-    </ul>
-  </nav>
+  <div class="logo">AgroTech Grupo09</div>
+  <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+  <ul class="nav-links" id="nav-links">
+    <li><a href="index.html" class="btn-nav">Home</a></li>
+    <li><a href="tecnologias.html" class="btn-nav">Tecnologias</a></li>
+    <li><a href="links.html" class="btn-nav">Órgãos e Iniciativas</a></li>
+    <li><a href="sobre.html" class="btn-nav">Sobre Nós</a></li>
+    <li><a href="contato.html" class="btn-nav">Fale Conosco</a></li>
+  </ul>
+</nav>
 
   <section class="banner" id="inicio">
     <div class="banner-texto">
