--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="texto">
       <h2>Transformando o campo com tecnologia</h2>
       <p>O agronegócio brasileiro vem se modernizando com o uso de drones, sensores, Internet das Coisas (IoT) e inteligência artificial. Essas inovações melhoram a produtividade, reduzem custos e minimizam impactos ambientais, garantindo um futuro mais sustentável para o campo.</p>
-      <p><a href="https://www.youtube.com/watch?v=FxOmH_Vwo1U">https://www.youtube.com/watch?v=FxOmH_Vwo1U</a></p>
+      <p><button href="https://www.youtube.com/watch?v=FxOmH_Vwo1U">https://www.youtube.com/watch?v=FxOmH_Vwo1U</button></p>
     </div>
   </section>
 
