--- a/sobre.html
+++ b/sobre.html
@@ -30,14 +30,14 @@
 
   <section class="sobre">
     <h2>Sobre Nós</h2>
-    <p>O Grupo 09 da FIAP desenvolveu este projeto com o objetivo de demonstrar como as tecnologias modernas estão transformando o agronegócio brasileiro e contribuindo para o combate à fome. Acreditamos que a inovação e a sustentabilidade são as chaves para um futuro mais justo e produtivo no campo.</p>
+    <p>O Grupo 09 da FIAP desenvolveu este projeto com o objetivo de demonstrar como as tecnologias emergentes estão transformando o agronegócio brasileiro e contribuindo de forma significativa para o combate à fome. Acreditamos que a inovação tecnológica e a sustentabilidade são pilares essenciais para promover um desenvolvimento agrícola mais eficiente, responsável e inclusivo.</p>
      <div class="missao">
       <h3>Nossa Missão</h3>
-      <p>Promover o uso de tecnologias inovadoras no agronegócio para aumentar a produtividade, reduzir desperdícios e garantir a segurança alimentar no Brasil.</p>
+      <p>Fomentar o uso de tecnologias inovadoras no agronegócio, com foco em aumentar a produtividade, otimizar recursos, reduzir desperdícios e garantir a segurança alimentar em todo o Brasil.</p>
     </div>
     <div class="visao">
       <h3>Nossa Visão</h3>
-      <p>Ser referência em soluções tecnológicas para o agronegócio, contribuindo para um futuro sustentável e livre da fome.</p>
+      <p>Consolidar-se como referência em soluções tecnológicas aplicadas ao agronegócio, contribuindo para a construção de um futuro sustentável, ético e livre da fome.</p>
     </div>
   </section>
  <section class="tecnologias">
