--- a/sobre.html
+++ b/sobre.html
@@ -29,14 +29,14 @@
   </nav>
 
   <section class="sobre">
-    <h2>Sobre Nós</h2>
+    <h2><b>Sobre Nós</b></h2>
     <p>O Grupo 09 da FIAP desenvolveu este projeto com o objetivo de demonstrar como as tecnologias emergentes estão transformando o agronegócio brasileiro e contribuindo de forma significativa para o combate à fome. Acreditamos que a inovação tecnológica e a sustentabilidade são pilares essenciais para promover um desenvolvimento agrícola mais eficiente, responsável e inclusivo.</p>
      <div class="missao">
-      <h3>Nossa Missão</h3>
+      <h3><b>Nossa Missão</b></h3>
       <p>Fomentar o uso de tecnologias inovadoras no agronegócio, com foco em aumentar a produtividade, otimizar recursos, reduzir desperdícios e garantir a segurança alimentar em todo o Brasil.</p>
     </div>
     <div class="visao">
-      <h3>Nossa Visão</h3>
+      <h3><b>Nossa Visão</b></h3>
       <p>Consolidar-se como referência em soluções tecnológicas aplicadas ao agronegócio, contribuindo para a construção de um futuro sustentável, ético e livre da fome.</p>
     </div>
   </section>
